--- a/src/App.css
+++ b/src/App.css
@@ -10,14 +10,7 @@
 }
 
 .app .warm {
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-
   background-image: url("./assets/warm-bg.jpg");
-  background-size: vmin;
-  background-position: bottom;
-  transition: 0.4 ease;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -114,7 +107,7 @@
   position: relative;
   display: inline-block;
   margin: 30px auto;
-  background-color: rgba(255, 255, 255, 0.2);
+  background-color: aliceblue;
   border-radius: 16px;
 
   padding: 15px 40px;
@@ -122,7 +115,6 @@
   color: #fff;
   font-size: 102px;
   font-weight: 900;
-
   text-shadow: 3px 6px rgba(50, 50, 70, 0.5);
   text-align: center;
   box-shadow: 3px 6px rgba(0, 0, 0, 0.2);
