--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,8 @@
   text-align: center;
 
   background-image: url("./assets/cold-bg.jpg");
-  background-size: vmin vmin;
+  background-repeat: no-repeat;
+  background-size: cover;
   background-position: center;
   transition: 0.4 ease;
 }
@@ -30,7 +31,7 @@
 
 .app-header {
   background-color: #282c34;
-  height: 30vh;
+  height: 26vh;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -70,7 +71,7 @@
   border-radius: 0px 0px 16px 16px;
   margin-top: -25px;
 
-  box-shadow: 0px 5px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 5px rgba(187, 99, 99, 0.2);
 
   color: #313131;
   font-size: 20px;
